NMSW-3095 - fixed the 0B content alignment issue (#595)
* NMSW-3095 - fixed the 0B content alignment issue

* NMSW-3095 renamed css class

--- a/src/public/stylesheets/custom.css
+++ b/src/public/stylesheets/custom.css
@@ -201,3 +201,7 @@ h2.govuk-notification-banner__title {
     width: 10px;
     height: 6.5px;
 }
+
+.vertical-align-top {
+    vertical-align: top;
+}
